--- a/android/build.gradle
+++ b/android/build.gradle
@@ -46,7 +46,7 @@ android {
         implementation files('libs/exoplayer-hls-2.9.6.jar')
         implementation files('libs/exoplayer-dash-2.9.6.jar')
         // implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.13.1'
-        implementation 'com.google.android.exoplayer:extension-mediasession:2.13.1'
+        // implementation 'com.google.android.exoplayer:extension-mediasession:2.13.1'
         implementation "android.arch.lifecycle:runtime:1.1.1"
         implementation "android.arch.lifecycle:common:1.1.1"
         implementation "android.arch.lifecycle:common-java8:1.1.1"
