--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,7 @@ version '1.0-SNAPSHOT'
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
@@ -15,10 +15,7 @@ buildscript {
 rootProject.allprojects {
     repositories {
         google()
-        jcenter()
-        flatDir {
-            dirs "$rootDir/libs"  // Thêm dòng này để tìm file trong thư mục libs
-        }
+        mavenCentral()
     }
 }
 
@@ -42,11 +39,11 @@ android {
     }
 
     dependencies {
-        implementation files('libs/exoplayer-core-2.9.6.jar')
-        implementation files('libs/exoplayer-hls-2.9.6.jar')
-        implementation files('libs/exoplayer-dash-2.9.6.jar')
-        // implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.13.1'
-        // implementation 'com.google.android.exoplayer:extension-mediasession:2.13.1'
+        implementation 'com.google.android.exoplayer:exoplayer-core:2.9.6'
+        implementation 'com.google.android.exoplayer:exoplayer-hls:2.9.6'
+        implementation 'com.google.android.exoplayer:exoplayer-dash:2.9.6'
+        implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.13.1'
+        implementation 'com.google.android.exoplayer:extension-mediasession:2.13.1'
         implementation "android.arch.lifecycle:runtime:1.1.1"
         implementation "android.arch.lifecycle:common:1.1.1"
         implementation "android.arch.lifecycle:common-java8:1.1.1"
