--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,9 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
 
@@ -39,12 +42,19 @@ android {
     }
 
     dependencies {
-        implementation 'com.google.android.exoplayer:exoplayer-core:2.13.1'
-        implementation 'com.google.android.exoplayer:exoplayer-hls:2.13.1'
-        implementation 'com.google.android.exoplayer:exoplayer-dash:2.13.1'
-        implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.13.1'
-        implementation 'com.google.android.exoplayer:exoplayer-ui:2.13.1'
-        implementation 'com.google.android.exoplayer:extension-mediasession:2.13.1'
+        // implementation 'com.google.android.exoplayer:exoplayer-core:2.13.1'
+        // implementation 'com.google.android.exoplayer:exoplayer-hls:2.13.1'
+        // implementation 'com.google.android.exoplayer:exoplayer-dash:2.13.1'
+        // implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.13.1'
+        // implementation 'com.google.android.exoplayer:exoplayer-ui:2.13.1'
+        // implementation 'com.google.android.exoplayer:extension-mediasession:2.13.1'
+        implementation(name: 'exoplayer-core-2.13.3', ext: 'aar')
+        implementation(name: 'exoplayer-hls-2.13.3', ext: 'aar')
+        implementation(name: 'exoplayer-dash-2.13.3', ext: 'aar')
+        implementation(name: 'exoplayer-smoothstreaming-2.13.3', ext: 'aar')
+        implementation(name: 'exoplayer-ui-2.13.3', ext: 'aar')
+        implementation(name: 'extension-mediasession-2.13.3', ext: 'aar')
+
         implementation "android.arch.lifecycle:runtime:1.1.1"
         implementation "android.arch.lifecycle:common:1.1.1"
         implementation "android.arch.lifecycle:common-java8:1.1.1"
